--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ matrix:
   include:
     # Python 3.7
     - python: 3.7
-      env: TOXENV=py37-django22,py37-django31,py37-django32,py37-django40
+      env: TOXENV=py37-django31,py37-django32,py37-django40
 
     # Python 3.8
     - python: 3.8
-      env: TOXENV=py38-django22,py38-django31,py38-django32,py38-django40
+      env: TOXENV=py38-django31,py38-django32,py38-django40
 
     # Python 3.9
     - python: 3.9
-      env: TOXENV=py39-django22,py39-django31,py39-django32,py39-django40
+      env: TOXENV=py39-django31,py39-django32,py39-django40
 
     # Django Master
     - python: 3.7
